<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_plot_cpp</name>
  <version>0.0.0</version>
  <description>A template ros2 wrapper for plotting using tabulate</description>
  <maintainer email="xuzheyuan961124@gmail.com">Charles Xu</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>cvbridge</depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
